--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -41,4 +41,9 @@ dependencies {
 
     implementation "com.acmerobotics.roadrunner:ftc:0.1.10"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.14"
+    implementation 'org.ftclib.ftclib:core:2.1.1'
+
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 }
